            ----------------------------------------

This file should be used to summarize modifications introduced in the 
code and to keep track of all tags.

     ---------------------------------------------------------------
     * Please list in reverse chronological order (last date on top)
     ---------------------------------------------------------------

1 December 2014  M. Kelsey (hadr-casc-V10-00-20)
------------------------------------------------
- G4CascadParticle.cc:  For stopped particles (zero path length), if at core
  of nucleus switch "movingIn" flag to false to particle will be forced to
  escape.  Protects against very rare infinite loop in mu- capture (nu_mu
  produced with tiny momentum, gets stuck in nucleus zone 0).

1 December 2014  M. Kelsey (hadr-casc-V10-00-19)
------------------------------------------------
- G4ElementaryParticleCollider.cc:  In muon absorption, check return from
  G4GDecay3 for null vector; report no-collision status and return.

- G4GDecay3.cc:  Fix typo in error report to use correct class name.

21 November 2014  M. Kelsey (hadr-casc-V10-00-18)
-------------------------------------------------
Per A. Dotti, introduce G4AutoDelete for all singleton classes to avoid
end-of-job memory leaks:

	G4CascadeChannelTables.cc,.hh	(also make dtor public)
	G4CascadeParameters.cc
	G4MultiBodyMomentumDist.cc
	G4TwoBodyAngularDist.cc

21 November 2014  M. Kelsey (hadr-casc-V10-00-17)
-------------------------------------------------
- G4PreCompoundDeexcitation.cc:  Per V.I., fix memory leak on exit by passing
  excitation handler through to PreCompound.

19 November 2014  M. Kelsey (hadr-casc-V10-00-16)
-------------------------------------------------
- G4CascadeInterface.cc:  Fix parentheses in retryInelasticNucleus()
  expression for conditional-compilation flag (does not affect defaults).

18 November 2014  M. Kelsey (hadr-casc-V10-00-15)
-------------------------------------------------